# 2023_NTU_EEE_DIP_E031

./: .gitattributes  CMakeLists.txt  README.md  configuration.json
Antenna/PGRtls/: App.config  D-DWM-PG.Designer.cs  D-DWM-PG.cs  D-DWM-PG.csproj  D-DWM-PG.resx  packages.config
Antenna/PGRtls/ATHelper/: AT.cs
Antenna/PGRtls/ModbusHelper/: ModbusRTU.cs
Antenna/PGRtls/Model/: DataClient.cs  IMUConfig.cs  Tag.cs  rxDiagnostic.cs
Antenna/PGRtls/MyWindows/: AncAutoCalibPos_Window.cs  Form_Tcp.cs
Antenna/PGRtls/Properties/: Resources.Designer.cs  Resources.resx
Antenna/PGRtls/Tool/: GDI_DrawHelper.cs  OxyPlotHelper.cs
Arduino/: WebServer.cpp  WebServer.h
Arduino/Main/: Main.ino
Controller/: CMakeLists.txt
Controller/include/: camera.h  robot.h
Controller/src/: camera.cpp  main.cpp  robot.cpp
Unity/Assets/: CameraLock.cs  CameraMovement.cs  CameraSelector.cs  ControllerRotate.cs  ControllerRotation.cs  CoordianteBehaviour.cs  CubeRotate.cs  DUDUNSPARCE.cs  FINALSHAPE.cs  File_Write_Behaviour.cs  Floor Material.mat  G29 Controls.cs  G29 Controls.inputactions  Gamepad Controls.cs  Gamepad Controls.inputactions  HexaToDecimal.cs  InputSystem.inputsettings.asset  Metallic Maerial.mat  MyWebSockerBehavior.cs  MyWebSocketServer.cs  New Physic Material.physicMaterial  Player Texture.mat  TestBehaviour.cs  TriggerMovement.cs  Video Texture.renderTexture  Wall Texture 1.mat  Wall Texture.mat  WebSocketSharp-netstandard.nuspec  Wood_Table Material.mat  [Content_Types].xml  websocket-sharp.xml
Unity/Assets/Materials/: IMG_0571.mat  IMG_0572.mat  IMG_0574.mat
Unity/Assets/Plugins/Inputter/: LICENSE.txt  README.md
Unity/Assets/Plugins/Inputter/Editor/: ExtensionProcessorEditor.cs  Inputter.Editor.asmdef  Inputter.cs
Unity/Assets/Plugins/Inputter/Runtime/: ExtensionProcessor.cs  Inputter.Runtime.asmdef  LogitechG29.cs  MaxProcessor.cs  MinProcessor.cs  OneMinusProcessor.cs
Unity/Assets/Plugins/Inputter/Runtime/LogitechSDK/: LogitechGSDK.cs
Unity/Assets/Plugins/Inputter/Samples/: G29.json  InputterSample_Scene.unity  InputterTester.cs  NewVehicleControls.cs  NewVehicleControls.inputactions
Unity/Assets/Samples/Input System/1.6.3/Visualizers/: InputControlVisualizer.cs  VisualizationHelpers.cs
Unity/Assets/Scenes/: SampleScene.unity
Unity/Assets/Sci-Fi Vehicles/: Example.unity  ExampleSettings.lighting  Ground.mat
Unity/Assets/Sci-Fi Vehicles/Vehicle_1/Materials/: Cannon_1_D.mat  Vehicle_1_D.mat  Wheels_1_D.mat  Wheels_2_D.mat
Unity/Assets/Sci-Fi Vehicles/Vehicle_2/: Vehicle_2.fbx
Unity/Assets/Sci-Fi Vehicles/Vehicle_2/Materials/: Rockets_1_D.mat  Vehicle_2_D.mat  Wheels_1_D.mat
Unity/Assets/Sci-Fi Vehicles/Vehicle_3/: Vehicle_3.fbx
Unity/Assets/Sci-Fi Vehicles/Vehicle_3/Materials/: Radar_1_D.mat  Vehicle_3_D.mat  Wheels_1_D.mat  Wheels_3_D.mat
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt
Unity/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
doc/: project_slide.pptx
